$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

May 27, 2010
------------
#787454 by berdir, mikey_p, merlinofchaos, and Michelle: Fixed error in SQL that caused new posts to be counted twice if revisions were on when the node was moved to another forum.
#801260 by dereine: advanced_forum_statistics_replies performance improved.

May 24, 2010
------------
#807742 by Michelle: Started work on documenting the templates.

May 11, 2010
------------
#793020 by Michelle: Fixed issue with no-style-name template file not being found.
#793664 by crea: Fixed Author Pane not showing on nodecomment reply preview.
#622670 by neclimdul: Fixed clipped folder icons when no posts in forum.

May 10, 2010
------------
#697234 by ericduran, nenne: Fixed issue with ampersand encoding in subforum list.
#791956 by friolator: Fixed missing closing bracked on comment anchor.
#583674 by Michelle: Confirmed and fixed regression with views column and 0 views.
#755940 by Michelle: Removed (hopefully!) unneeded a id forum-reply-NNN and removed suspected bad copy/paste line.
#769954 by Michelle, gege2061: Make sure there is a body field before trying to form alter it. Silly poll. :P

March 24, 2010
--------------
#741902 by Michelle: Added "forum" as a default type to be styled if settings form has never been submitted.

March 23, 2010
--------------
#687196 by iva2k, merlinofchaos, SupermanScott: Changed loading of views to use require instead of require once and use the view name instead of the filename.
#492794 by Michelle: Now themes the node preview for forum nodes.
#492794 by Michelle: Fixed issue where $node->teaser in manually loaded node prevented comment previews from being themed when on their own page.
#751890 by Michelle: Made Views a dependency.
#738074 by yaslama: Adapted version of the core patch on [#113611].
#702128 by Michelle: Added checks for nodecomment around search views as well as link to my posts view in secondary links.